Modularise CSS Add Header component
Refactor Card and Alert Component with relavant svgs

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-* {
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
-}
+
+@import "./reset-css.css";
+@import "./components/alert/alert.css";
+@import "./components/avatar/avatar.css";
+@import "./components/badge/badge.css";
+@import "./components/card/card.css";
+@import "./components/chip/chip.css";
+@import "./components/dialogue/dialogue.css";
+@import "./components/drawer/drawer.css";
+@import "./components/header/header.css";
+@import "./components/snackbar/snackbar.css";
+@import "./components/tab-bar/tab-bar.css";
+
+
+
 :root{
     --primary-color: #059669;
     --rgba-primary-color-hover: 5, 150, 105, 0.1;
@@ -12,16 +22,26 @@
 
     --black: #000000;
     --white: white;
+    --rgba-light-theme-hover: 255, 255, 255, 0.1;
     --grey-subtle: #F2F2F2;
     --grey-secondary: #757575;
 
     --rgba-box-shadow: 0, 0, 0, 0.1;
     --description-text: #757575;
+
+    --alert-success-light-font-color: #00b341;
+    --rgba-alert-success-light-background-color: 0, 173, 64, 0.43;
+    --alert-error-light-font-color: #ff4500;
+    --rgba-alert-error-light-background-color: 250, 67, 0, 0.39;
+    --alert-warning-light-font-color: #ffbf00;
+    --rgba-alert-warning-light-background-color: 255, 191, 0, 0.3;
+    --alert-info-light-font-color: #00abfb;
+    --rgba-alert-info-light-background-color: 31, 184, 255, 0.53;
 }
 
 body{
-    background: var(--grey-subtle);
-    padding: 2rem;
+    background: #dedede;
+    padding: 15rem;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -34,713 +54,5 @@ body{
 .comp-lib-h2 {
     margin: 1rem;
 }
-
-/* Common CSS Starts */
-.button-inherit-parent {
-    background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
-}
-/* Common CSS Ends */
-
-
-
-
-/*  Avatar Component Starts */
-.avatar{
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    background-color: var(--primary-color);
-    color: var(--white);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: relative;
-}
-.avatar__content {
-    width: 4rem;
-    height: 4rem;
-
-    border-radius: 50%;
-}
-/* Avatar Component with Badge */
-.avatar .badge {
-    position: absolute;
-    top: -0.5rem;
-    right: -0.5rem;
-    width: 1.5rem;
-    height: 1.5rem;
-}
-.avatar .badge__content {
-    width: 0.75rem;
-    height: 0.75rem;
-}
-/*  Avatar Component Ends */
-
-
-
-
-/*  Alert Component Starts */
-.alert {
-    position: relative;
-    height: 5rem;
-}
-.alert__bg-primary {
-    background-color: var(--primary-color);
-    opacity: 0.5;
-}
-.alert__bg-dark {
-    background-color: var(--grey-subtle);
-    opacity: 0.5;
-}
-.alert__content{
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    color: var(--white);
-
-    display: flex;
-    /* justify-content: center;
-    align-items: center; */
-}
-
-.alert__icon {
-    width: 2rem;
-    height: 2rem;
-    color: var(--primary-color);
-}
-
-.alert__text {
-    flex-grow: 1;
-    padding: 0rem 1rem;
-}
-
-.alert__title {
-    color: var(--primary-color);
-}
-.alert__description {
-    color: var(--primary-color);
-}
-
-
-.alert--position-start {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-
-    width: 30rem;
-    height: 5rem;
-    border-radius: 0.25rem;
-}
-/*  Avatar Component Ends */
-
-
-
-/*  Badge Component Starts */
-.badge{
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-    background-color: var(--primary-color);
-    color: var(--white);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.badge__content {
-    width: 1rem;
-    height: 1rem;
-}
-/*  Badge Component Ends */
-
-
-
-
-
-/*  Card Component Starts */
-.card{
-    display: grid;
-    width: 20rem;
-    height: auto;
-    background: var(--white);
-    border-radius: 0.25rem;
-    overflow: hidden;
-
-}
-
-.card__img {
-    grid-area: cardImg;
-    width: 6rem;
-    height: 6rem;
-}
-
-.card__info {
-    grid-area: cardInfo;
-}
-
-.card__actions {
-    grid-area: cardActions;
-}
-
-.card__info {
-    padding: 0.5rem 0.25rem 0.25rem 0.25rem;
-}
-.card__primary-text{
-    font-size: 1.25rem;
-    color: var(--black);
-}
-.card__secondary-text{
-    color: var(--grey-secondary);
-}
-
-.card__description {
-    grid-area: cardDesc;
-    padding: 0.25rem;
-    color: var(--grey-secondary);
-    /* display: none; */
-}
-
-.card__actions {
-    display: flex;
-
-    min-height: 2rem;
-    padding: 0.5rem;
-    align-items: center;
-
-}
-
-.card__button {
-    color: var(--primary-color);
-    padding: 0.5rem;
-}
-
-.card__icons {
-    margin-left: auto;
-}
-.card__icon {
-    width: 1.5rem;
-    height: 1.5rem;
-    margin-left: 1rem;
-}
-
-/*  Card Component Starts -- Basic */
-.card-basic {
-    grid-template-areas: 'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardInfo     cardInfo     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardInfo     cardInfo     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardDesc     cardDesc     cardDesc    cardDesc    cardDesc    cardDesc'
-                         'cardActions cardActions cardActions cardActions cardActions cardActions';
-}
-.card__img--basic {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-/*  Card Component Ends -- Basic */
-
-/*  Card Component Starts -- Basic with Text over Media */
-.card-basic-text-over-media {
-    grid-template-areas: 'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardDesc     cardDesc     cardDesc    cardDesc    cardDesc    cardDesc'
-                         'cardActions cardActions cardActions cardActions cardActions cardActions';
-}
-.card__img--basic-text-over-media {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-.card__info--basic-text-over-media {
-    grid-area: cardImg-start / cardImg-start / cardImg-end / cardImg-end;
-    margin-top: auto;
-}
-/*  Card Component Ends -- Basic with Text over Media */
-
-
-/*  Card Component Starts -- Basic with Header */
-.card-basic-text-header {
-    grid-template-areas: 'cardInfo     cardInfo     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardDesc     cardDesc     cardDesc    cardDesc    cardDesc    cardDesc'
-                         'cardActions cardActions cardActions cardActions cardActions cardActions';
-}
-.card__img--basic-text-over-media {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-.card__info--basic-text-header {
-    grid-area: cardInfo;
-    margin-top: auto;
-}
-
-/*  Card Component Ends -- Basic with Header */
-
-
-/*  Card Component Starts -- Basic only buttons */
-.card-basic-only-buttons {
-    grid-template-areas: 'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardInfo     cardInfo     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardInfo     cardInfo     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardDesc     cardDesc     cardDesc    cardDesc    cardDesc    cardDesc'
-                         'cardActions cardActions cardActions cardActions cardActions cardActions';
-}
-.card__img--basic-only-buttons {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.card__icons-only-buttons {
-    display: none;
-
-}
-/*  Card Component Ends -- Basic  only buttons */
-
-
-/*  Card Component Starts -- Basic only Icons */
-.card-basic-only-icons {
-    grid-template-areas: 'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardImg     cardImg     cardImg    cardImg    cardImg    cardImg'
-                         'cardInfo     cardInfo     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardInfo     cardInfo     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardDesc     cardDesc     cardDesc    cardDesc    cardDesc    cardDesc'
-                         'cardActions cardActions cardActions cardActions cardActions cardActions';
-}
-.card__img--basic-only-icons {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.card__buttons--basic-only-icons {
-    display: none;
-
-}
-/*  Card Component Ends -- Basic  only button */
-
-
-/*  Card Component Starts -- Horizontal Image and Text */
-.card-img-text-side-by-side {
-    grid-template-areas: 'cardImg     cardImg     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardImg     cardImg     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardImg     cardImg     cardInfo    cardInfo    cardInfo    cardInfo'
-                         'cardActions cardActions cardActions cardActions cardActions cardActions';
-}
-
-.card__description-none {
-    display: none;
-}
-/*  Card Component Ends -- Horizontal Image and Text */
-
-
-/*  Card Component Ends */
-
-
-
-
-
-/*  Chip Component with Flex */
-.chip-holder {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    align-content: flex-start;
-
-    height: 15rem;
-    background: var(--grey-subtle);
-    position: relative;
-
-    border-radius: 0.25rem;
-    box-shadow: 2px 2px 2px 1px rgba(0.1, 0.1, 0.1, 0.1);
-}
-
-.chip-holder__chip {
-    min-width: 10rem;
-    min-height: 3rem;
-    padding: 1rem;
-    margin: 0.5rem 1rem 0.5rem 1rem;
-    background: var(--primary-color);
-    border-radius: 50px;
-    color: var(--white);
-    text-align: center;
-}
-/*  Chip Component Ends with Flex */
-
-
-
-/*  Chip Component with Grid */
-.chip-holder {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-
-    height: 15rem;
-    background: var(--grey-subtle);
-    position: relative;
-
-    border-radius: 0.25rem;
-    box-shadow: 2px 2px 2px 1px rgba(0.1, 0.1, 0.1, 0.1);
-}
-
-.chip-holder__chip {
-    min-width: 10rem;
-    min-height: 3rem;
-    padding: 1rem;
-    margin: 0.5rem 1rem 0.5rem 1rem;
-    background: var(--primary-color);
-    border-radius: 50px;
-    color: var(--white);
-    text-align: center;
-}
-
-@media only screen and (max-width: 1212px) {
-    .chip-holder {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
-/*  Chip Component Ends with Grid */
-
-
-
-
-/*  Drawer Component Starts */
-.drawer {
-    width: 15rem;
-    background-color: var(--white);
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-}
-.drawer__heading {
-    margin: 0rem 0rem 1rem 0rem;
-}
-
-.drawer__title {
-
-}
-
-.drawer__subtitle {
-    color: var(--grey-secondary);
-}
-
-.drawer__content-holder {
-    display: flex;
-    flex-direction: column;
-}
-
-.drawer__content {
-    height: 2rem;
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.25rem;
-}
-.drawer__content--focus {
-    background-color: var(--primary-color);
-    opacity: 0.5;
-}
-
-.drawer__icon {
-    width: 2rem;
-    height: 2rem;
-    display: inline-block;
-}
-
-.drawer__icon-description {
-    display: inline-block;
-    color: var(--grey-secondary);
-    margin-left: 2rem;
-
-}
-/*  Drawer Component Ends */
-
-
-
-/*  Header Component Starts */
-.header {
-    height: 3rem;
-    background-color: var(--primary-color);
-
-    display: flex;
-}
-
-.header__title {
-    margin-top: auto;
-
-}
-
-
-.header__action {
-    display: flex;
-    margin-left: auto;
-}
-
-.header__btn-download {
-    width: 4rem;
-    height: auto;
-    margin: 0rem 1rem 0rem 1rem;
-    background: var(--black);
-}
-
-.header__btn-print {
-    width: 4rem;
-    height: auto;
-    margin: 0rem 1rem 0rem 1rem;
-    background: var(--black);
-}
-
-.header__btn-save {
-    width: 4rem;
-    height: auto;
-    margin: 0rem 1rem 0rem 1rem;
-    background: var(--black);
-}
-
-/*  Header Component Ends */
-
-
-/*  Snackbar Component Starts */
-.snackbar {
-    width: 30rem;
-    height: 3rem;
-    border-radius: 0.25rem;
-
-    background-color: var(--grey-secondary);
-    display: flex;
-    align-items: center;
-    
-    /* Uncomment to Enable them to fix snack bar */
-
-    /* position: fixed;
-    bottom: 30px;
-    left: 30px; */
-}
-
-.snackbar__message {
-    flex-grow: 1;
-    padding: 0.5rem;
-    color: var(--white);
-}
-
-.snackbar__text-btn {
-    text-decoration: none;
-    border: none;
-    background: none;
-    padding: 0.5rem;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-}
-
-.snackbar__action {
-    color: var(--primary-color);
-}
-
-.snackbar__close {
-    text-decoration: none;
-}
-
-.snackbar__text-btn:last-child {
-    margin-right: 1rem;
-}
-
-/*  Snackbar Component Ends */
-
-
-
-/*  Dialogue Component Starts */
-
-.dialogue {
-    width: 20rem;
-    height: 15rem;
-    border-radius: 0.5rem;
-    box-shadow: 0px 1px 0px 0px rgba(var(--rgba-box-shadow));
-    background-color: var(--white);
-    
-    display: grid;
-    grid-template-columns: "1fr 1fr 1fr";
-
-}
-
-.dialogue__title {
-    grid-area: title;
-    /* background-color: red; */
-    padding: 1rem;
-    height: 2rem;
-}
-
-.dialogue__supporting-text {
-    grid-area: supportingText;
-    padding: 1rem;
-    color: var(--description-text);
-
-}
-
-.dialogue__action-btn {
-    width: auto;
-    border-radius: 8px;
-    margin: 6px;
-    color: var(--primary-color);
-    text-align: center;
-}
-.dialogue__action-btn:hover {
-    background-color:rgba(var(--rgba-primary-color-hover));
-}
-
-.dialogue__action-btn__primary {
-    grid-area: actionBtnPrimary;
-}
-
-.dialogue__action-btn__secondary {
-    grid-area: actionBtnSecondary;
-}
-
-/*  Dialogue Component Starts -- with Title with Buttons Side-By-Side  */
-.dialogue--title-buttons-side-by-side {
-    grid-template-areas: 'title          title            title'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         '.....          actionBtnPrimary actionBtnSecondary';
-}
-/*  Dialogue Component Ends -- with Buttons Stacked with Buttons Side-By-Side  */
-
-
-/*  Dialogue Component Starts -- with Title with Buttons Stacked */
-.dialogue--buttons-stacked {
-    grid-template-areas: 'title          title            title'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         '.....          .....            actionBtnPrimary'
-                         '.....          .....            actionBtnSecondary';
-
-}
-
-.dialogue__action-btn--stacked {
-    text-align: left;
-    padding-left: 1rem;
-}
-/*  Dialogue Component Ends -- with Title with Buttons Stacked */
-
-
-/*  Dialogue Component Starts -- without Title with Buttons Side-By-Side */
-.dialogue--no-title-buttons-side-by-side {
-    grid-template-areas: 'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         '.....          actionBtnPrimary actionBtnSecondary';
-}
-
-.dialogue__title--none {
-    display: none;
-}
-/*  Dialogue Component Ends -- with Buttons Stacked with Buttons Side-By-Side */
-
-
-/*  Dialogue Component Starts -- without Title with Buttons Stacked */
-.dialogue--no-title-buttons-stacked {
-    grid-template-areas: 'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         'supportingText supportingText   supportingText'
-                         '.....          .....            actionBtnPrimary'
-                         '.....          .....            actionBtnSecondary';
-}
-
-.dialogue__title--none {
-    display: none;
-}
-
-.dialogue__action-btn--stacked {
-    text-align: left;
-    padding-left: 1rem;
-}
-/*  Dialogue Component Ends -- with Buttons Stacked with Buttons Stacked */
-
-
-/*  Dialogue Component Ends */
-
-
-
-
-/*  Tabs Component Starts */
-
-.tab-bar {
-    display: inline-flex;
-    background: var(--white);
-    height: auto;
-}
-
-.tab-bar__tab {
-    width: 10rem;
-    height: auto;
-    min-height: 3rem;
-
-    border-bottom: 3px solid var(--white);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.tab-bar__tab:hover {
-    background: rgba(var(--rgba-primary-color-hover));
-}
-.tab-bar__tab--focus {
-    border-bottom: 3px solid var(--primary-color);
-}
-
-.tab-bar__icon {
-    width: 2rem;
-    height: 2rem;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.tab-bar__title {
-    width: auto;
-    height: auto;
-    text-transform: uppercase;
-    color: var(--primary-color);
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/*  Tabs Component Starts -- with Text */
-.tab-bar__icon--none {
-    display: none;
-}
-/*  Tabs Component Ends -- with Text */
-
-/*  Tabs Component Starts -- with Text and Icon side-by-side */
-.tab-bar__icon--none {
-}
-/*  Tabs Component Ends -- with Text and Icon side-by-side */
-
-/*  Tabs Component Starts -- with Text and Icon Stacked */
-.tab-bar__tab--icon-text-stacked {
-    flex-direction: column;
-}
-/*  Tabs Component Ends -- with Text and Icon Stacked */
-
-/*  Tabs Component Ends */
-
-
-
-
 
 
